--- a/master/templates/master/campaign_create.html
+++ b/master/templates/master/campaign_create.html
@@ -1,14 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="rpgui-container framed-golden">
-        <h1>New campaign</h1>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <div class="rpgui-center">
-                <button class="rpgui-button" type="submit"><p>Submit</p></button>
-            </div>
-        </form>
+    <div class="rpg-container">
+        <div class="rpg-panel" style="max-width: 800px; margin: 50px auto;">
+            <h1 class="panel-title">📝 New Campaign</h1>
+            <form method="post">
+                {% csrf_token %}
+                <div class="rpg-form-group">
+                    {{ form.as_p }}
+                </div>
+                <div class="action-buttons mt-2">
+                    <button class="rpg-btn btn-primary" type="submit">Create Campaign</button>
+                </div>
+            </form>
+        </div>
     </div>
 {% endblock%}
