--- a/game/static/css/rpg-styles.css
+++ b/game/static/css/rpg-styles.css
@@ -246,6 +246,17 @@ body {
     border-left: 4px solid;
 }
 
+.game-message ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.game-message li {
+    margin: 0;
+    padding: 0;
+}
+
 .game-message.success {
     background: rgba(46, 204, 113, 0.1);
     border-color: var(--color-stamina);
